# rdtsc-bench

./: .gitignore  CMakeLists.txt  README.md  advanced_example.cpp  example.cpp
include/: tsc_benchmark.h  tsc_clock.h  tsc_cpu.h
include/utils/: affinity.h  compiler.h  types.h
